# dpapi-forensic

./: .gitleaks.toml  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  deny.toml
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: blob.rs  chrome.rs  credential.rs  decrypt.rs  error.rs  lib.rs  masterkey.rs  vault.rs  wifi.rs
docs/: privacy.md  terms.md
docs/plans/: dpapi-step2.md
forensic/: Cargo.toml
forensic/src/: lib.rs  main.rs
tests/data/: README.md  build_credential_vector.py  build_localstate_vector.py  build_vault_vector.py  build_wifi_vector.py
