[package]
name = "dpapi-forensic"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "DPAPI forensic toolkit built on dpapi-core — re-exports the decrypt primitives; the on-disk auditor (Chrome/Edge, Credential Manager, Vault, Wi-Fi) is in progress"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/dpapi-forensic"
readme.workspace = true
authors.workspace = true
keywords = ["forensics", "dpapi", "windows", "dfir", "credentials"]
categories.workspace = true

[dependencies]
dpapi-core = { workspace = true }

[lints]
workspace = true
